--- a/backend/mypy.ini
+++ b/backend/mypy.ini
@@ -55,3 +55,6 @@ ignore_missing_imports = True
 [mypy-rest_framework.*]
 ignore_missing_imports = True
 
+[mypy-core.models]
+ignore_errors = True
+
