--- a/backend/mypy.ini
+++ b/backend/mypy.ini
@@ -49,6 +49,12 @@ ignore_errors = True
 [mypy-psycopg2.*]
 ignore_missing_imports = True
 
+[mypy-rest_framework.*]
+ignore_missing_imports = True
+
+[mypy-rest_framework]
+ignore_missing_imports = True
+
 [mypy-django.*]
 ignore_missing_imports = True
 
