--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -11,7 +11,6 @@ on:
       - 'frontend/**'
       - '.github/workflows/frontend-ci.yml'
 
-# Prevent duplicate runs for the same branch
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}-frontend
   cancel-in-progress: true
@@ -28,44 +27,39 @@ jobs:
       CI: true
 
     steps:
-      # 1) Checkout code
+      # Checkout repository
       - name: Checkout
         uses: actions/checkout@v4
 
-      # 2) Setup Node and pnpm with caching
+      # Setup Node 22 and enable npm caching
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
           node-version: '22'
-          cache: 'pnpm'
-          cache-dependency-path: frontend/pnpm-lock.yaml
+          cache: 'npm'
+          cache-dependency-path: frontend/package-lock.json
 
-      - name: Setup pnpm
-        uses: pnpm/action-setup@v4
-        with:
-          version: 9
-
-      # 3) Install deps (reproducible)
+      # Install dependencies (uses package-lock.json if present)
       - name: Install dependencies
-        run: pnpm install --frozen-lockfile
+        run: npm install --no-audit --no-fund
 
-      # 4) Cache Next.js build cache to speed up subsequent builds
+      # Cache Next.js build cache for faster builds
       - name: Cache Next.js build cache
         uses: actions/cache@v4
         with:
           path: frontend/.next/cache
-          key: ${{ runner.os }}-nextjs-${{ hashFiles('frontend/pnpm-lock.yaml', 'frontend/next.config.ts') }}
+          key: ${{ runner.os }}-nextjs-${{ hashFiles('frontend/package.json', 'frontend/next.config.ts') }}
           restore-keys: |
             ${{ runner.os }}-nextjs-
 
-      # 5) Lint (use lint:strict to fail on warnings if desired)
+      # Lint using Next.js ESLint integration
       - name: Lint
-        run: pnpm lint
+        run: npm run lint
 
-      # 6) TypeScript type-check (no emit)
+      # TypeScript type-check (no emit)
       - name: Type check
-        run: pnpm exec tsc --noEmit
+        run: npx tsc --noEmit
 
-      # 7) Build to ensure production build stays healthy
+      # Production build
       - name: Build
-        run: pnpm build
+        run: npm run build
