feat: add types-requests dependency and improve type checking in mypy configuration; refactor user model usage in tests for better type safety

--- a/backend/mypy.ini
+++ b/backend/mypy.ini
@@ -11,19 +11,23 @@ ignore_missing_imports = True
 warn_unused_ignores = False
 warn_redundant_casts = True
 warn_unused_configs = True
-warn_return_any = False  # Too noisy with Django/DRF
+warn_return_any = False
+# Too noisy with Django/DRF
 warn_unreachable = True
 warn_no_return = True
 
 # Allow untyped functions (pragmatic for Django projects)
 disallow_untyped_defs = False
 disallow_incomplete_defs = False
-check_untyped_defs = False  # Don't check bodies of untyped functions
+check_untyped_defs = False
+# Don't check bodies of untyped functions
 
 # Type checking options (relaxed)
-no_implicit_optional = False  # Allow implicit Optional
+no_implicit_optional = False
+# Allow implicit Optional
 strict_equality = False
-strict_optional = False  # Allow None in non-Optional contexts
+strict_optional = False
+# Allow None in non-Optional contexts
 
 # Show error codes for better error messages
 show_error_codes = True
