--- a/frontend/package.json
+++ b/frontend/package.json
@@ -65,8 +65,6 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
-    "eslint": "8.48.0",
-    "eslint-config-next": "15.1.0",
     "input-otp": "^1.4.2",
     "kbar": "^0.1.0-beta.45",
     "lucide-react": "^0.476.0",
@@ -99,17 +97,24 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^9.3.0",
+    "eslint": "8.48.0",
+    "eslint-config-next": "15.1.0",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.1",
     "@types/node": "22.10.2",
     "@types/react": "19.0.1",
     "@types/react-dom": "19.0.2",
     "@types/sort-by": "^1.2.3",
     "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^6.11.0",
+    "@vitejs/plugin-react": "^5.1.2",
     "husky": "^9.1.7",
+    "jsdom": "^27.4.0",
     "lint-staged": "^15.2.11",
     "prettier": "3.4.2",
     "prettier-plugin-tailwindcss": "^0.6.11",
-    "tw-animate-css": "^1.2.4"
+    "tw-animate-css": "^1.2.4",
+    "vitest": "^4.0.17"
   },
   "overrides": {
     "@types/react": "19.0.1",
