--- a/backend/pytest.ini
+++ b/backend/pytest.ini
@@ -2,6 +2,6 @@
 DJANGO_SETTINGS_MODULE = essay_coach.settings
 python_files = tests.py test_*.py *_test.py
 addopts = -v --tb=short
-testpaths = ai_feedback
-python_classes = *Tests
+testpaths = ai_feedback core
+python_classes = Test* *Tests
 python_functions = test_*
