Refactor Kanban and Product components; remove unused files and streamline middleware
- Deleted KanbanViewPage, NewSectionDialog, NewTaskDialog, TaskCard, and related store utilities to simplify the Kanban feature.
- Removed ProductForm, ProductListingPage, CellAction, and related table components to clean up the product management section.
- Updated middleware to enhance authentication checks for dashboard routes.
- Adjusted request handling to remove unnecessary authorization logic.
- Added DNS resolution test script for improved network diagnostics.

--- a/.gitignore
+++ b/.gitignore
@@ -148,7 +148,7 @@ cython_debug/
 .pyright_canary
 .pyright
 .pyright.lock
-  
+
 # Node.js
 node_modules
 npm-debug.log*
@@ -185,6 +185,7 @@ result*
 .direnv/
 .nix-zsh/
 .dev_pg/
+.envrc
 .DS_Store
 
 # SQLite
@@ -201,7 +202,7 @@ cypress/videos/
 cypress/screenshots/
 
 # TypeScript incremental build info
-*.tsbuildinfo 
+*.tsbuildinfo
 
 # Local PostgreSQL volumes & dev cluster
 .docker/
