--- a/frontend/.npmrc
+++ b/frontend/.npmrc
@@ -1,4 +1,5 @@
-legacy-peer-deps=true
-shamefully-hoist=true 
-# added this to fix sentry warning 
-# https://docs.sentry.io/platforms/javascript/troubleshooting/#pnpm-resolving-import-in-the-middle-external-package-errors
+# pnpm 10 + Next.js 15 + React 19 compatibility settings
+strict-peer-dependencies=false
+auto-install-peers=true
+public-hoist-pattern[]=*eslint*
+timeout=600000
