--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,7 @@
     "url": "https://github.com/Kiranism"
   },
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -H 127.0.0.1 -p 5100",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -35,17 +35,31 @@
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-checkbox": "^1.1.4",
     "@radix-ui/react-collapsible": "^1.1.3",
+    "@radix-ui/react-collection": "^1.1.8",
+    "@radix-ui/react-compose-refs": "^1.1.2",
+    "@radix-ui/react-context": "^1.1.3",
     "@radix-ui/react-context-menu": "^2.2.6",
     "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-direction": "^1.1.1",
+    "@radix-ui/react-dismissable-layer": "^1.1.11",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
+    "@radix-ui/react-focus-guards": "^1.1.3",
+    "@radix-ui/react-focus-scope": "^1.1.8",
     "@radix-ui/react-hover-card": "^1.1.6",
     "@radix-ui/react-icons": "^1.3.2",
+    "@radix-ui/react-id": "^1.1.1",
     "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-menu": "^2.1.16",
     "@radix-ui/react-menubar": "^1.1.6",
     "@radix-ui/react-navigation-menu": "^1.2.5",
     "@radix-ui/react-popover": "^1.1.6",
+    "@radix-ui/react-popper": "^1.2.8",
+    "@radix-ui/react-portal": "^1.1.10",
+    "@radix-ui/react-presence": "^1.1.5",
+    "@radix-ui/react-primitive": "^2.1.4",
     "@radix-ui/react-progress": "^1.1.2",
     "@radix-ui/react-radio-group": "^1.2.3",
+    "@radix-ui/react-roving-focus": "^1.1.11",
     "@radix-ui/react-scroll-area": "^1.2.3",
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-separator": "^1.1.2",
@@ -57,20 +71,28 @@
     "@radix-ui/react-toggle": "^1.1.2",
     "@radix-ui/react-toggle-group": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "@radix-ui/react-use-callback-ref": "^1.1.1",
+    "@radix-ui/react-use-controllable-state": "^1.2.2",
+    "@radix-ui/react-use-effect-event": "^0.0.1",
+    "@radix-ui/react-use-layout-effect": "^1.1.1",
+    "@radix-ui/react-use-size": "^1.1.1",
+    "@radix-ui/react-visually-hidden": "^1.2.4",
     "@sentry/nextjs": "^9.19.0",
     "@tabler/icons-react": "^3.31.0",
     "@tailwindcss/postcss": "^4.0.0",
     "@tanstack/react-table": "^8.21.2",
+    "aria-hidden": "^1.2.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
+    "get-nonce": "^1.0.1",
     "input-otp": "^1.4.2",
     "kbar": "^0.1.0-beta.45",
     "lucide-react": "^0.476.0",
     "match-sorter": "^8.0.0",
-    "motion": "^11.17.0",
-    "next": "15.3.2",
+    "motion": "^12.26.2",
+    "next": "15.2.8",
     "next-themes": "^0.4.6",
     "nextjs-toploader": "^3.7.15",
     "nuqs": "^2.4.1",
@@ -97,8 +119,6 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^9.3.0",
-    "eslint": "8.48.0",
-    "eslint-config-next": "15.1.0",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.1",
     "@types/node": "22.10.2",
@@ -108,6 +128,8 @@
     "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^6.11.0",
     "@vitejs/plugin-react": "^5.1.2",
+    "eslint": "8.48.0",
+    "eslint-config-next": "15.1.0",
     "husky": "^9.1.7",
     "jsdom": "^27.4.0",
     "lint-staged": "^15.2.11",
