--- a/.env.example
+++ b/.env.example
@@ -4,15 +4,18 @@ DIFY_BASE_URL=https://api.dify.ai/v1
 
 # Django Settings
 DEBUG=True
-SECRET_KEY=your-secret-key
+SECRET_KEY=your-secret-key-here
 ALLOWED_HOSTS=localhost,127.0.0.1
 
-# Database
+# Database (Docker Compose)
 POSTGRES_DB=essaycoach
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
-POSTGRES_HOST=localhost
+POSTGRES_HOST=127.0.0.1
 POSTGRES_PORT=5432
 
 # CORS
-CORS_ALLOWED_ORIGINS=http://localhost:3000
+CORS_ALLOWED_ORIGINS=http://localhost:5100,http://127.0.0.1:5100
+
+# Frontend
+NEXT_PUBLIC_API_URL=http://127.0.0.1:8000
