refactor: reorganize project structure and documentation
This commit optimizes the EssayCoach project structure by:

Project Structure
- Move Python project configuration to root directory
- Create root pyproject.toml for tool configuration (ruff, mypy, black)
- Simplify backend/pyproject.toml as lightweight sub-package config
- Add backend/essay_coach/__main__.py for CLI entry point
- Move Python virtual environment (.venv) to root directory

Documentation Reorganization
- Create docs/planning/ for project planning documents (roadmap, architecture TODO)
- Add docs/development/configuration.md with comprehensive config guide
- Update docs/index.md with navigation links to planning docs
- Update mkdocs.yml navigation structure

Script Organization
- Reorganize scripts/ directory structure:
  - scripts/db/postgres-manager.sh: unified database management
  - scripts/dev/start-*.sh: development service scripts
- Delete redundant scripts in scripts/dev-env/
- Delete duplicate pg-manager*.sh scripts
- Update scripts/README.md with usage guide

Configuration Updates
- Update .gitignore to include backend/.env and frontend/.env.local
- Simplify root pyproject.toml for tool configuration only

Changes: +1465 insertions, -739 deletions across 26 files

--- a/.gitignore
+++ b/.gitignore
@@ -168,6 +168,8 @@ dist-ssr
 .env.development.local
 .env.test.local
 .env.production.local
+backend/.env
+frontend/.env.local
 
 # IDEs and Editors
 .vscode/*
