--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -52,8 +52,11 @@ dev-dependencies = [
 
 [tool.ruff]
 target-version = "py312"
-line-length = 100
+line-length = 120
 select = ["E", "F", "I", "N", "W", "UP"]
+
+[tool.ruff.per-file-ignores]
+"**/migrations/*.py" = ["E501"]
 
 [tool.mypy]
 python_version = "3.12"
@@ -61,5 +64,5 @@ strict = true
 plugins = ["mypy_django_plugin.main"]
 
 [tool.black]
-line-length = 100
+line-length = 120
 target-version = ['py312']
