--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -23,7 +23,7 @@ dev = [
     "django-stubs>=4.2,<5.0",
     "types-requests>=2.31,<3.0",
     "black>=24.1,<25.0",
-    "mypy>=1.8,<2.0",
+    "pyright>=1.1.0,<2.0",
     "pytest>=7.4,<8.0",
     "pytest-django>=4.7,<5.0",
     "pytest-mock>=3.12,<4.0",
@@ -45,7 +45,7 @@ dev-dependencies = [
     "django-stubs",
     "types-requests",
     "black",
-    "mypy",
+    "pyright",
     "pytest",
     "pytest-django",
     "pytest-mock",
@@ -60,10 +60,11 @@ select = ["E", "F", "I", "N", "W", "UP"]
 [tool.ruff.per-file-ignores]
 "**/migrations/*.py" = ["E501"]
 
-[tool.mypy]
-python_version = "3.12"
-strict = true
-plugins = ["mypy_django_plugin.main"]
+[tool.pyright]
+pythonVersion = "3.12"
+typeCheckingMode = "basic"
+reportMissingTypeArgument = false
+reportGeneralTypeIssues = false
 
 [tool.black]
 line-length = 120
