fix: Update ci.yml to use pyright instead of mypy
The main CI workflow was still using mypy for type checking.
Updated to use pyright for consistency with the pyright-check.yml workflow.

This ensures all type checking uses the same tool (pyright) for better
performance and consistency across the project.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -68,7 +68,7 @@ jobs:
         run: cd backend && uv run pytest
 
       - name: Run type checking
-        run: cd backend && uv run mypy .
+        run: cd backend && uv run pyright .
 
       - name: Run linting
         run: cd backend && uv run ruff check .
