fix: Fix GitHub Actions pyright workflow working directory
The workflow was failing because it ran uv sync in the repository root
directory, but the actual Python dependencies are defined in backend/pyproject.toml.

Solution: Added working-directory: ./backend to both dependency installation
and type checking steps to ensure uv commands run in the correct directory.

This fixes the error: 'No file matched to [**/uv.lock]'

--- a/.github/workflows/pyright-check.yml
+++ b/.github/workflows/pyright-check.yml
@@ -20,9 +20,11 @@ jobs:
         enable-cache: true
     
     - name: Install dependencies
+      working-directory: ./backend
       run: |
         uv sync
         uv sync --no-dev
     
     - name: Run pyright type checking
+      working-directory: ./backend
       run: uv run pyright .
