--- a/.github/workflows/pyright-check.yml
+++ b/.github/workflows/pyright-check.yml
@@ -17,7 +17,7 @@ jobs:
     - name: Setup uv
       uses: astral-sh/setup-uv@v4
       with:
-        enable-cache: true
+        enable-cache: false
     
     - name: Install dependencies
       working-directory: ./backend
