--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,6 +40,10 @@ jobs:
           uv sync
           uv sync --no-dev
 
+      - name: Create logs directory
+        working-directory: ./backend
+        run: mkdir -p logs
+
       - name: Run migrations
         env:
           POSTGRES_HOST: localhost
@@ -69,16 +73,16 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Install pnpm
+        uses: pnpm/action-setup@v2
+        with:
+          version: 10
+
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: "22"
           cache: "pnpm"
-
-      - name: Install pnpm
-        uses: pnpm/action-setup@v2
-        with:
-          version: 10
 
       - name: Install dependencies
         run: cd frontend && pnpm install
