--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,6 +48,7 @@ jobs:
         env:
           POSTGRES_HOST: localhost
           POSTGRES_PORT: ${{ job.services.postgres.ports[5432] }}
+          POSTGRES_DB: test_essaycoach
         working-directory: ./backend
         run: uv run python manage.py migrate --noinput
 
@@ -55,6 +56,7 @@ jobs:
         env:
           POSTGRES_HOST: localhost
           POSTGRES_PORT: ${{ job.services.postgres.ports[5432] }}
+          POSTGRES_DB: test_essaycoach
         working-directory: ./backend
         run: uv run pytest
 
@@ -73,25 +75,30 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Install pnpm
-        uses: pnpm/action-setup@v2
-        with:
-          version: 10
-
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: "22"
           cache: "pnpm"
 
+      - name: Install pnpm
+        uses: pnpm/action-setup@v2
+        with:
+          version: 10
+          working-directory: ./frontend
+
       - name: Install dependencies
-        run: cd frontend && pnpm install
+        working-directory: ./frontend
+        run: pnpm install
 
       - name: Run linter
-        run: cd frontend && pnpm lint
+        working-directory: ./frontend
+        run: pnpm lint
 
       - name: Run tests
-        run: cd frontend && pnpm test
+        working-directory: ./frontend
+        run: pnpm test
 
       - name: Build
-        run: cd frontend && pnpm build
+        working-directory: ./frontend
+        run: pnpm build
