--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "lint": "next lint",
     "lint:fix": "eslint src --fix && pnpm format",
     "lint:strict": "eslint --max-warnings=0 src",
+    "test": "vitest run",
     "format": "prettier --write .",
     "format:check": "prettier -c -w .",
     "prepare": "husky"
