chore: 移除pytest timeout限制
移除pytest的timeout限制，避免某些测试因执行时间较长而被终止

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -58,7 +58,7 @@ jobs:
           POSTGRES_PORT: ${{ job.services.postgres.ports[5432] }}
           POSTGRES_DB: test_essaycoach
         working-directory: ./backend
-        run: uv run pytest
+        run: uv run pytest --timeout 0
 
       - name: Run type checking
         working-directory: ./backend
