--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -64,6 +64,7 @@ select = ["E", "F", "I", "N", "W", "UP"]
 
 [tool.ruff.per-file-ignores]
 "**/migrations/*.py" = ["E501"]
+"conftest.py" = ["E402"]  # pytest-django requires django.setup() after env vars
 
 [tool.pyright]
 pythonVersion = "3.12"
