--- a/.github/workflows/deploy-docs-on-main.yml
+++ b/.github/workflows/deploy-docs-on-main.yml
@@ -38,8 +38,8 @@ jobs:
 
       - name: Install dependencies and build documentation
         run: |
-          # Install mkdocs and plugins
-          uv pip install mkdocs-material pymdown-extensions mkdocs-mermaid2-plugin mkdocs-git-revision-date-localized-plugin mkdocs-minify-plugin
+          # Install mkdocs and plugins using pip directly (no venv needed in CI)
+          pip install mkdocs-material pymdown-extensions mkdocs-mermaid2-plugin mkdocs-git-revision-date-localized-plugin mkdocs-minify-plugin
           # Build documentation
           mkdocs build --strict
 
