chore: 清理 iCloud 冲突文件并更新 gitignore
- 删除所有 iCloud 冲突文件（* 2.*, * 3.* 等），共 637 个文件
- 更新 .gitignore 添加 iCloud 冲突文件模式
- 清理构建缓存目录（节省 800MB 空间）
- 删除无用文件：
  - backend/E2E_TEST_RESULTS 2.md
  - docs/api-reference/endpoints 3.md
  - docs/api-reference/endpoints 4.md

原因：这些文件是由 iCloud/macOS 文件同步冲突产生的，没有任何用处，占用大量磁盘空间。

--- a/.gitignore
+++ b/.gitignore
@@ -214,3 +214,15 @@ docs/api-reference/endpoints.md
 docs/api-reference/endpoints 2.md
 docs/backend/models/models.md
 .doc_generator_cache.json
+
+# iCloud/Dropbox file sync conflict files
+* 2.*
+* 3.*
+* 4.*
+* 5.*
+* 6.*
+* 7.*
+* 8.*
+* 9.*
+* 10.*
+
