--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -64,9 +64,11 @@ dev = [
 [tool.ruff]
 target-version = "py312"
 line-length = 120
+
+[tool.ruff.lint]
 select = ["E", "F", "I", "N", "W", "UP"]
 
-[tool.ruff.per-file-ignores]
+[tool.ruff.lint.per-file-ignores]
 "**/migrations/*.py" = ["E501"]
 "conftest.py" = ["E402"]  # pytest-django requires django.setup() after env vars
 
