--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -59,6 +59,7 @@ dev = [
     "pytest-timeout>=2.3,<3.0",
     "ruff>=0.1,<1.0",
     "pytest-env>=1.1.3",
+    "pytest-cov>=7.0.0",
 ]
 
 [tool.ruff]
