--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -76,7 +76,7 @@ select = ["E", "F", "I", "N", "W", "UP"]
 [tool.pyright]
 pythonVersion = "3.12"
 typeCheckingMode = "basic"
-venvPath = "."
+venvPath = ".venv"
 venv = ".venv"
 # ===== Critical Checks (Enable Immediately) =====
 reportMissingImports = true          # Import errors cause runtime failures
